| Summary: | ASTERISK-26269: res_pjsip: Wrong state for aors without registered contacts after startup | ||||
| Reporter: | nappsoft (nappsoft) | Labels: | |||
| Date Opened: | 2016-08-05 01:27:00 | Date Closed: | 2016-08-29 18:10:13 | ||
| Priority: | Major | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Resources/res_pjsip | ||
| Versions: | 13.11.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) ast13.diff | |||
| Description: | Just discovered a problem with asterisk-13.11.0-rc1 related to the changes made in ASTERISK-26061:
After startup the State for all hints that have no registered contact is "Idle" instead of "Unavailable" and will stay like this until a contact registers. Applying the patch (which reverts some of the changes) fixes the issue (what might not be the idea behind the original patch indeed, but I only wanted to check where the issue comes from). The important change is the second changeset I guess (I only made the change of the first changeset as I'm not sure why the "if (status)" had been removed...). Please note that I've observed another strange behavior: two of the aors with no registered contact changed to the right status after a while (the other nine didn't)! The only difference between these aors and the others is that these two aors have a name that is similar to the one of a aor with a registered contact: the one with the registered contact is called "snom", the others are called "snomprov" and "snomd375". So as you can see the name of the aor with a registered contact is a substring of the name of the other two aors... Is there a problem with some contact/aor matching functions somewhere in the code? | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2016-08-05 01:27:00.831-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua C. Colp (jcolp) 2016-08-05 04:47:51.106-0500 This was also uncovered by the realtime runs of PJSIP. There is a disparity between device state of config file endpoints and device state of realtime endpoints. By: Joshua C. Colp (jcolp) 2016-08-19 13:18:06.688-0500 The mentioned patch is on ASTERISK-26061. | ||||